--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R:
            family = "Sarna",
            role = c("aut", "cre"),
            email = "aleksandra.sarna97@gmail.com")
-Description: Spatial Data Declustering
+Description: declusteringr improves representation of preferential sampling and unequally distribution.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
